--- a/README
+++ b/README
@@ -1,5 +1,9 @@
-This is a kitty widget for your Mac Dashboard.
-
+Kitty Widget
+============
+This is a kitty widget for your Mac Dashboard that uses [http://placekitten.com/] to show you pictures of cats.
 You can get look at specific sizes or have a random kitty displayed for you.
 
+Installation
+============
 Just clone the repo, open it in Finder and it will install to your dashboard!
+
